# fileshare

./: .env  .gitignore  LICENSE  pyproject.toml  readme.md  run_test.ps1  scheduler.py
fileshare/: .gitignore  README.md  config.yaml  db.py  settings.py
fileshare/api/: file_routes.py  login_registration_routes.py  profile_routes.py
fileshare/common/: base_repository.py  logger.py
fileshare/fileshare/: main.py
fileshare/fileshare/api/: file_routes.py
fileshare/fileshare/common/: enums.py  exception.py  utility.py
fileshare/fileshare/common/auth/: jwt_token.py
fileshare/fileshare/models/: file.py  user.py
fileshare/fileshare/repositories/: file_repository.py  user_repository.py
fileshare/fileshare/schema/: profile.py
fileshare/fileshare/services/: file_service.py  user_service.py
fileshare/schema/: file.py  login_registration.py
fileshare/scripts/: server.py
tests/: .test.txt  test_setup.py  test_user.py
tests/integration/: test_file.py  test_setup.py  test_user.py
